# Guiding-Center-Simulation

./: .gitignore  LICENSE  hello.cpp  readme.md  test  test.bat
Lab/Example/: Diagnosor  Solver  example_use_geopack.m  main.m  plot_field_line_and_wave.m  test.m
Lab/Example/field_line/: field_line_starting_points.fls
Lab/Example/input/: 50DEG.para  E0_0.51_q_-1.00_tini_1577836800_x_0.00_y_-1.40_z_0.00_Ek_1.00_pa_40.00.para  E0_0.51_q_-1.00_tini_1577836800_x_0.00_y_-1.40_z_0.00_Ek_1.00_pa_90.00.para  pol_wave_config.pol  test.wpol  tor_wave_config.tor
Lab/Example/output/: E0_0.51_q_-1.00_tini_1577836800_x_0.00_y_-1.40_z_0.00_Ek_1.00_pa_40.00.gcd  E0_0.51_q_-1.00_tini_1577836800_x_0.00_y_-1.40_z_0.00_Ek_1.00_pa_40.00.gct
guiding_center_run/: read_gct.m  simulation.m
guiding_center_solver/: .gitignore  CMakeLists.txt  readme.md
guiding_center_solver/doc/: broadband_standing_wave.md  field_calculator.md  path_utils_README.md  poloidal_simple_harmonic_wave.md  simple_harmonic_wave.md  singular_particle.md
guiding_center_solver/include/: coordinates_transfer.h  dydt.h  field_calculator.h  geopack_caller.h  magnetic_field_models.h  particle_calculator.h  path_utils.h  plasmasphere_model.h  poloidal_mode_wave.h  poloidal_simple_harmonic_wave.h  singular_particle.h  toroidal_mode_wave.h  toroidal_simple_harmonic_wave.h
guiding_center_solver/src/: Diagnosor.cpp  Solver.cpp  coordinates_transfer.cpp  dydt.cpp  field_calculator.cpp  field_line_tracer.cpp  geopack_caller.cpp  magnetic_field.cpp  magnetic_field_models.cpp  particle_calculator.cpp  path_utils.cpp  path_utils_example.cpp  plasmasphere_model.cpp  poloidal_mode_wave.cpp  poloidal_simple_harmonic_wave.cpp  rk45.cpp  singular_particle.cpp  toroidal_mode_wave.cpp  toroidal_simple_harmonic_wave.cpp
postprocess/: geopack.m  particle_initialize.m  plot_delta_energy.m  plot_gsm_earth.m  plot_kinetic_energy.m  plot_trajectory.m  read_fld.m  read_gcd.m  read_gct.m  wave_function_calculator.m
postprocess/include/: geopack_matlab_caller.h
